scrollbar fixed, call to actions added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
   --jet: hsla(228, 10%, 20%, 1);
   --onyx: hsla(225, 10%, 24%, 1);
   --green-ryb: hsla(85, 72%, 40%, 1);
-  --less-green: hsla(85, 72%, 40%, 0.75);
+  --less-green: hsla(85, 72%, 40%, 0.8);
   --magnolia: hsla(280, 23%, 95%, 0.9);
   --eggy: hsla(84, 100%, 86%, 0.604);
   --other-blue: hsl(240, 1%, 35%, 1);
@@ -62,6 +62,7 @@ html, * {
   padding: 0 auto;
   font-family: var(--body-font);
   overflow-x: hidden;
+  scroll-behavior: smooth;
 
 }
 
@@ -182,6 +183,17 @@ a {
   filter: drop-shadow(0px 0px 1px var(--clr-bg)) drop-shadow(2px 2px 1px var(--clr-theme));
   transform: translateX(-2px) translateY(-2px);
   transition: all ease-out 200ms;  
+}
+
+.form-submit {
+  background-color: var(--clr-theme);
+  color: white;
+  padding: .5rem 1.5rem;
+  width: fit-content;
+  font-size: x-large;
+  border: none;
+  
+
 }
 
 span {
@@ -339,29 +351,33 @@ body.dark-theme {
 /* <<================ Filters ================>>  */
 
 
+
+
 .filters__sections {
   width: calc(100% - 2rem);
 }
 
 .filters__picker {
-  width: 75vw;
+  width: calc(90% - 1rem);
   max-width: 40rem;
   display: flex;
+  flex-wrap: wrap;
   margin: 2rem auto;
   padding: .375rem;
   border-radius: .75rem;
   background-color: var(--clr-less-theme);
   justify-content: space-between;
+  text-align: center;
   column-gap: .5rem;
 }
 
 .filters__button {
-  width: 100%;
-  min-width: 125px;
+  width: 49%;
+  min-width: 220px;
   border: none;
   outline: none;
   padding: 1rem;
-  color: var(--clr-theme);
+  color: var(--clr-contrast-lt);
   font-size: var(--h3-font-size);
   font-family: var(--body-font);
   font-weight: 500;
@@ -371,6 +387,11 @@ body.dark-theme {
   transition: .3s;
   border: 2px solid var(--clr-bg);
 }
+
+.alt {
+  background-color: var(--clr-bg);
+}
+
 
 .filters__button:hover {
   background-color: var(--clr-bg);
@@ -539,6 +560,7 @@ body.dark-theme {
 /* =============== Contact Form =============== */
 .contact.container {
   width: 90%;
+  text-align: center;
 
 }
 
@@ -603,14 +625,22 @@ body.dark-theme {
 /* =============== SCROLL BAR =============== */
  ::-webkit-scrollbar {
 
-  background-color: var(--clr-accent);
+  background-color: var(--clr-bg);
+  outline: 1px solid (var(--clr-theme));
+  
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-less-theme);
   border-radius: .5rem;
+
 }
 
 
 
 /* =============== BREAKPOINTS =============== */
+
 /* For small devices */
+
 @media screen and (max-width: 380px) {
   .container {
     margin-left: 1rem;
@@ -631,7 +661,7 @@ body.dark-theme {
 
   .filters__button {
     font-size: var(--small-font-size);
-    padding:0;
+    padding: 0.5rem;
   }
 
   .socicon {
@@ -658,6 +688,22 @@ body.dark-theme {
   #profile {
     margin-top: 5%;
   }
+
+  .filters__picker {
+    background-color: transparent;
+  }
+
+  .filters__button {
+    background-color: var(--clr-theme);
+    color: var(--clr-bg);
+  }
+
+  .alt {
+    background-color: var(--clr-less-theme);
+    color: var(--clr-bg);
+  }
+
+
 }
 
 
